fix: lets scroll bar appear on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -198,7 +198,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* width: 100%; */
+  width: 100%;
 }
 
 .soundProject {
@@ -234,7 +234,7 @@
 
 @media screen and (max-width: 450px) {
   .soundContainer .col1 { padding: 0.8vh 0.8vw; margin: 0; }
-  .soundContainer .col2 { padding: 0; width: 100vw; }
+  .soundContainer .col2 { padding: 0; width: 96vw; }
 }
 
 .InstagramIconCC {
